--- a/style.css
+++ b/style.css
@@ -2,14 +2,17 @@
 
 * {
     outline: none !important;
-}
-
-body {
+}body {
     text-align: center;
 }
 
 form {
     display: inline-block;
+}input {
+    height: 30px;
+    font-family: 'Crimson Text';
+    border-radius: 2px;
+    border: 0.01px solid #272727;
 }select {
     font-family: 'Crimson Text';
     border: none;
@@ -19,6 +22,8 @@ form {
     text-indent: 1px;
     text-overflow: '';
     text-align-last:center;
+}select:hover {
+    cursor:pointer;
 }
 
 h1 {
@@ -29,6 +34,7 @@ h1 {
     text-align: center;
     font-size: 50px;
     font-family: 'IM FELL DW Pica';
+    cursor: default;
 }a {
     font-family: 'Crimson Text';
     text-decoration: none;
