--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ h1 {
 }a:hover {
     color: #474747;
     cursor: pointer;
+}p {
+    font-family: 'Crimson Text';
 }
 
 @-webkit-keyframes bob-on-hover {
