--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ form {
 h1 {
     font-weight: lighter;
     letter-spacing: 3px;
-    color: #272727;
+    color: #000000;
     position: relative;
     text-align: center;
     font-size: 50px;
@@ -47,6 +47,61 @@ h1 {
     cursor: pointer;
 }p {
     font-family: 'Crimson Text';
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 52px;
+    height: 25.5px;
+}
+
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .2s;
+    transition: .2s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 18px;
+    width: 18px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .2s;
+    transition: .2s;
+}
+
+input:checked + .slider {
+    background-color: #000000;
+}
+    
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 50px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
 
 @-webkit-keyframes bob-on-hover {
